@@ -483,26 +483,24 @@ boolean_t init_system_info(void) {
 
 //FIXME: move to standalone system class
 boolean_t update_system_info() {
-        if (Run.flags & Run_ProcessEngineEnabled) {
-                if (getloadavg_sysdep(systeminfo.loadavg, 3) == -1) {
-                        LogError("'%s' statistic error -- load average data collection failed\n", Run.system->name);
-                        goto error1;
-                }
-
-                if (! used_system_memory_sysdep(&systeminfo)) {
-                        LogError("'%s' statistic error -- memory usage data collection failed\n", Run.system->name);
-                        goto error2;
-                }
-                systeminfo.memory.usage.percent  = systeminfo.memory.size > 0ULL ? (100. * (double)systeminfo.memory.usage.bytes / (double)systeminfo.memory.size) : 0.;
-                systeminfo.swap.usage.percent = systeminfo.swap.size > 0ULL ? (100. * (double)systeminfo.swap.usage.bytes / (double)systeminfo.swap.size) : 0.;
-
-                if (! used_system_cpu_sysdep(&systeminfo)) {
-                        LogError("'%s' statistic error -- cpu usage data collection failed\n", Run.system->name);
-                        goto error3;
-                }
-
-                return true;
+        if (getloadavg_sysdep(systeminfo.loadavg, 3) == -1) {
+                LogError("'%s' statistic error -- load average data collection failed\n", Run.system->name);
+                goto error1;
         }
+
+        if (! used_system_memory_sysdep(&systeminfo)) {
+                LogError("'%s' statistic error -- memory usage data collection failed\n", Run.system->name);
+                goto error2;
+        }
+        systeminfo.memory.usage.percent  = systeminfo.memory.size > 0ULL ? (100. * (double)systeminfo.memory.usage.bytes / (double)systeminfo.memory.size) : 0.;
+        systeminfo.swap.usage.percent = systeminfo.swap.size > 0ULL ? (100. * (double)systeminfo.swap.usage.bytes / (double)systeminfo.swap.size) : 0.;
+
+        if (! used_system_cpu_sysdep(&systeminfo)) {
+                LogError("'%s' statistic error -- cpu usage data collection failed\n", Run.system->name);
+                goto error3;
+        }
+
+        return true;
 
 error1:
         systeminfo.loadavg[0] = 0;
